--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>A Step-By-Step Guide to Filing a Personal Injury Claim in Columbia</title>
-  <meta name="description" content="A simple, step-by-step guide to filing a personal injury claim in Columbia. Learn what to do after an accident, how to collect evidence, work with doctors, and get legal help.">
+  <meta name="description" content="A step-by-step guide to filing a personal injury claim in Columbia. Learn what to do after an accident, how to collect evidence and get legal help.">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://personalinjurylawyercolumbia.pages.dev/">
+  <meta name="google-site-verification" content="SsVqFr9x2cjgXDiakw7XUxRssTOcKenHJWE5lCAcf04" />
 
   <!-- Open Graph (basic) -->
   <meta property="og:title" content="A Step-By-Step Guide to Filing a Personal Injury Claim in Columbia">
@@ -436,4 +437,5 @@ https://www.bbb.org/us/sc/columbia/profile/lawyers/stewart-law-offices-0663-3422
   </script>
 </body>
 </html>
+
 
