--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ https://www.bbb.org/us/sc/columbia/profile/lawyers/stewart-law-offices-0663-3422
 
         <h2>Step 5: Contact an Attorney</h2>
         <p>Filing a personal injury claim can be stressful and complicated. Many insurance companies try to offer the lowest possible settlement. That is why talking to a legal professional can make a big difference.</p>
-        <p>For example, if you need legal guidance, you can speak with a <strong><a href="https://mikeqeer.github.io/columbiapersonalinjurylawyer/">Columbia personal injury lawyer</a></strong> to understand your rights and build a stronger case.</p>
+        <p>For example, if you need legal guidance, you can speak with a <strong>Columbia personal injury lawyer</a></strong> to understand your rights and build a stronger case.</p>
         <h3>Benefits of hiring an attorney</h3>
         <ul class="simple">
           <li>They understand state laws.</li>
@@ -437,5 +437,6 @@ https://www.bbb.org/us/sc/columbia/profile/lawyers/stewart-law-offices-0663-3422
   </script>
 </body>
 </html>
+
 
 
